--- a/Project4/src/App.css
+++ b/Project4/src/App.css
@@ -6,6 +6,11 @@
 .task-create {
   width: 450px;
 }
+
+.task-update {
+  width: 100%
+}
+
 .task-form {
   display: flex;
   flex-direction: column;
@@ -37,6 +42,11 @@
   -o-border-radius: 10px;
   font-size: 20px;
   margin: 10px 0px;
+}
+
+.update-button { 
+  background-color: blueviolet;
+  border-color: blueviolet;
 }
  
 .task-list {
